--- a/tripsapplication/pom.xml
+++ b/tripsapplication/pom.xml
@@ -123,6 +123,9 @@
 
         <jsqlparser.version>5.3</jsqlparser.version>
 
+        <!-- JMH Benchmark Framework -->
+        <jmh.version>1.37</jmh.version>
+
         <jpackage.type>APP_IMAGE</jpackage.type>
         <jpackage.name>TRIPS</jpackage.name>
 
@@ -597,6 +600,20 @@
             <version>0.45</version>
         </dependency>
 
+        <!-- JMH Microbenchmarking Framework -->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -613,6 +630,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.openjdk.jmh</groupId>
+                            <artifactId>jmh-generator-annprocess</artifactId>
+                            <version>${jmh.version}</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
@@ -868,6 +890,50 @@
                                 <goals>
                                     <goal>jpackage</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <!-- JMH Benchmark profile -->
+        <!-- Usage: ./mvnw-java25.sh test -Pbenchmark -Dbenchmark.class=FastNoiseLiteBenchmark -->
+        <profile>
+            <id>benchmark</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.1.0</version>
+                        <executions>
+                            <execution>
+                                <id>run-benchmarks</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <classpathScope>test</classpathScope>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath/>
+                                        <argument>org.openjdk.jmh.Main</argument>
+                                        <argument>-f</argument>
+                                        <argument>1</argument>
+                                        <argument>-wi</argument>
+                                        <argument>3</argument>
+                                        <argument>-i</argument>
+                                        <argument>5</argument>
+                                        <argument>-rf</argument>
+                                        <argument>json</argument>
+                                        <argument>-rff</argument>
+                                        <argument>${project.build.directory}/jmh-result.json</argument>
+                                        <argument>${benchmark.class:-.*Benchmark.*}</argument>
+                                    </arguments>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
