--- a/tripsapplication/src/main/resources/application.yml
+++ b/tripsapplication/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       connectionTimeout: 20000
       maximumPoolSize: 5
       poolName: HikariPoolTrips
-    url: jdbc:h2:file:./data/tripsdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:./data/tripsdb;DB_CLOSE_ON_EXIT=TRUE;WRITE_DELAY=100;FILE_LOCK=FS
     driverClassName: org.h2.Driver
     username: sa
     password:
@@ -85,5 +85,4 @@ management:
   metrics:
     tags:
       application: ${spring.application.ui.title}
-
 
